[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/h_folder.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/file_prompt_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/auto_queue_dialog.gd" type="Script" id=3]

[node name="auto_queue_dialog" type="WindowDialog"]
margin_left = 128.0
margin_top = 64.0
margin_right = 824.0
margin_bottom = 448.0
rect_min_size = Vector2( 480, 240 )
popup_exclusive = true
window_title = "auto queue setup"
script = ExtResource( 3 )

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="margin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 688.0
margin_bottom = 376.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="margin/ScrollContainer"]
margin_right = 680.0
margin_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="1" parent="margin/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 664.0
margin_bottom = 68.0
input_text = "1."

[node name="select_dir" parent="margin/ScrollContainer/VBoxContainer/1" instance=ExtResource( 2 )]
margin_top = 32.0
margin_right = 664.0
margin_bottom = 68.0
text = "choose directory"
mode = 2
access = 2

[node name="2" parent="margin/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 92.0
margin_right = 664.0
margin_bottom = 152.0
input_text = "2."

[node name="username" type="HBoxContainer" parent="margin/ScrollContainer/VBoxContainer/2"]
margin_top = 32.0
margin_right = 664.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="margin/ScrollContainer/VBoxContainer/2/username"]
margin_top = 2.0
margin_right = 110.0
margin_bottom = 26.0
text = "username:"

[node name="username" type="OptionButton" parent="margin/ScrollContainer/VBoxContainer/2/username"]
margin_left = 118.0
margin_right = 664.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="3" parent="margin/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 176.0
margin_right = 664.0
margin_bottom = 236.0
input_text = "3."

[node name="game" type="HBoxContainer" parent="margin/ScrollContainer/VBoxContainer/3"]
margin_top = 32.0
margin_right = 664.0
margin_bottom = 60.0

[node name="Label2" type="Label" parent="margin/ScrollContainer/VBoxContainer/3/game"]
margin_top = 2.0
margin_right = 66.0
margin_bottom = 26.0
text = "game:"

[node name="game" type="OptionButton" parent="margin/ScrollContainer/VBoxContainer/3/game"]
margin_left = 74.0
margin_right = 664.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="4" parent="margin/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 260.0
margin_right = 664.0
margin_bottom = 320.0
input_text = "4."

[node name="HBoxContainer" type="HBoxContainer" parent="margin/ScrollContainer/VBoxContainer/4"]
margin_top = 32.0
margin_right = 664.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="margin/ScrollContainer/VBoxContainer/4/HBoxContainer"]
margin_top = 2.0
margin_right = 198.0
margin_bottom = 26.0
text = "folder structure:"

[node name="folder_name_structure" type="OptionButton" parent="margin/ScrollContainer/VBoxContainer/4/HBoxContainer"]
margin_left = 206.0
margin_right = 664.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "platform-type"
flat = true
items = [ "platform-type", null, false, 0, null, "platform", null, false, 1, null ]
selected = 0

[node name="5" parent="margin/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 344.0
margin_right = 664.0
margin_bottom = 404.0
input_text = "5."

[node name="HBoxContainer3" type="HBoxContainer" parent="margin/ScrollContainer/VBoxContainer/5"]
margin_top = 32.0
margin_right = 664.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="margin/ScrollContainer/VBoxContainer/5/HBoxContainer3"]
margin_top = 2.0
margin_right = 66.0
margin_bottom = 26.0
text = "type:"

[node name="shared_type" type="OptionButton" parent="margin/ScrollContainer/VBoxContainer/5/HBoxContainer3"]
margin_left = 74.0
margin_right = 664.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="6" parent="margin/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 428.0
margin_right = 664.0
margin_bottom = 488.0
input_text = "6."

[node name="scan" type="Button" parent="margin/ScrollContainer/VBoxContainer/6"]
margin_top = 32.0
margin_right = 664.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "scan"
